github page のCSSを修正

--- a/dev/assets/sass/_style.scss
+++ b/dev/assets/sass/_style.scss
@@ -588,6 +588,7 @@ table.listTable td.btn input {
   }
   .content main {
     max-width: 850px;
+    margin: auto;
   }
   aside.side-left {
     margin-right: 32px;
